ui: Fix code intel status indicator being cut off (#10933)
Previously, the indicator would be cut off by the right edge of the
browser.

This pushes the status indicator to the left and into the page further.

--- a/web/src/repo/actions/CodeIntelStatusIndicator.scss
+++ b/web/src/repo/actions/CodeIntelStatusIndicator.scss
@@ -5,7 +5,7 @@
         display: none;
         position: absolute;
         top: 1rem;
-        right: -5rem;
+        right: -1rem;
         z-index: 50;
         width: 13rem;
         max-width: 90vw;
